--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.294.0"
+    "react-hook-form": "^7.63.0",
+    "react-router-dom": "^7.9.3",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
