--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@supabase/supabase-js": "^2.58.0",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
